changed mobile menu font size and fixed contact page on mobile

--- a/portfolio/src/styles/components/_contact.scss
+++ b/portfolio/src/styles/components/_contact.scss
@@ -2,10 +2,6 @@
   width: 100vw;
   background: $off-black;
 
-  section {
-    height: 100vh;
-  }
-
   h1 {
     font-size: $xxl-size;
     color: $off-white;
