--- a/portfolio/src/styles/components/_navbar.scss
+++ b/portfolio/src/styles/components/_navbar.scss
@@ -66,7 +66,7 @@ nav {
       display: none;
     }
     .nav-button {
-      font-size: $lg-size;
+      font-size: 2,5rem;
       display: block;
       color: $off-purple;
       margin: auto 50px auto auto;
